# AstraTesting

./: CMakeLists.txt  CPackConfig.cmake  LICENSE.md  README.md  build.sh
Commons/: Config.cpp  Config.h  Logger.cpp  Logger.h  Presets.h  Terminal.cpp  Terminal.h  Utils.cpp  Utils.h
Tests/: BaseTest.cpp  BaseTest.h  InternetTest.cpp  InternetTest.h
demo/: main.cpp
misc/: config.json
